Supprime les points médians WIP

--- a/data/benefits/javascript/bretagne-aide-code-permis.yml
+++ b/data/benefits/javascript/bretagne-aide-code-permis.yml
@@ -4,7 +4,7 @@ description: Cette aide vise à favoriser l’accès à la formation et l’inse
   professionnelle des jeunes résidant en Bretagne en prenant en charge le financement de
   leur permis de conduire.
 conditions:
-  - 'Etre suivi·e par une mission locale : <a target="_blank" rel="noopener" title="Voir
+  - 'Etre suivi ou suivie par une mission locale : <a target="_blank" rel="noopener" title="Voir
     les missions locales - Nouvelle fenêtre"
     href="https://www.unml.info/les-missions-locales/annuaire/bretagne/">contacter
     la mission locale la plus proche</a>.'
