--- a/data/benefits/javascript/caf-haute-marne-aide-bafd.yml
+++ b/data/benefits/javascript/caf-haute-marne-aide-bafd.yml
@@ -5,7 +5,7 @@ description: "L'aide proposée par la CAF de la Haute-Marne peut vous aider à
 conditions:
   - Résider en Haute-Marne.
   - Être titulaire du BAFA.
-  - Être inscrit·e au stage de formation générale pour la préparation du brevet
+  - Être inscrit ou inscrite au stage de formation générale pour la préparation du brevet
     d’aptitude aux fonctions de Directeur.
 conditions_generales:
   - type: age
