--- a/data/benefits/javascript/caf-nord-bafd.yml
+++ b/data/benefits/javascript/caf-nord-bafd.yml
@@ -13,7 +13,7 @@ conditions_generales:
 profils: []
 conditions:
   - Avoir une expérience d'animation.
-  - Être inscrit·e à la session de perfectionnement.
+  - Être inscrit ou inscrite à la session de perfectionnement.
   - Déposer sa demande dans les 3 mois suivant l’inscription au stage de
     perfectionnement.
 interestFlag: _interetBafa
