--- a/data/benefits/javascript/caf-seine-st-denis-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-seine-st-denis-aide-bafa-approfondissement.yml
@@ -5,7 +5,7 @@ description: L’aide à la formation du BAFA est une aide locale mise à
   session d’approfondissement ou de qualification en complément de l'aide
   nationale apportée par la CAF.
 conditions:
-  - Être inscrit·e en session d’approfondissement portant sur le handicap ou sur la citoyenneté.
+  - Être inscrit ou inscrite en session d’approfondissement portant sur le handicap ou sur la citoyenneté.
   - Fournir une attestation de l’établissement de formation.
 conditions_generales:
   - type: age
