--- a/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/grand-est-mobilite-internationale-sanitaire-et-sociale.yml
@@ -7,7 +7,7 @@ description: Cette aide vise à favoriser la mobilité internationale des élèv
   sociale de la région Grand Est. Ce dispositif peut s’appliquer en complément
   d’une aide à la mobilité ERASMUS +.
 conditions:
-  - Être inscrit·e dans un institut de formations sanitaires ou sociales agréé
+  - Être inscrit ou inscrite dans un institut de formations sanitaires ou sociales agréé
     par la Région Grand Est (hors IBODE, IADE et Cadre de santé).
   - Ne pas être salarié·e (promotion professionnelle CIF, apprentis).
   - Souhaiter effectuer une période d’études ou de stage d’une durée minimale de
