--- a/data/benefits/javascript/grand_est-pass-mobilite-formation.yml
+++ b/data/benefits/javascript/grand_est-pass-mobilite-formation.yml
@@ -8,7 +8,7 @@ description: Cette aide est destinée aux stagiaires de la formation
   l'achat d'un vélo, ou la préparation du permis de conduire (partie conduite).
 conditions:
   - Effectuer la demande d'aide via votre organisme de formation.
-  - Être inscrit·e dans une formation financée par la Région Grand Est
+  - Être inscrit ou inscrite dans une formation financée par la Région Grand Est
     concernant les métiers identifiés en tension.
 conditions_generales:
   - type: regions
