--- a/data/benefits/javascript/guadeloupe-bourse-sociale.yml
+++ b/data/benefits/javascript/guadeloupe-bourse-sociale.yml
@@ -8,7 +8,7 @@ conditions:
   - Poursuivre une formation sociale dans un des établissements de formation
     listés <a target="_blank" rel="noopener" title ="Voir les établissements de formation - Nouvelle fenêtre"
     href="https://www.regionguadeloupe.fr/les-aides-les-services/guide-des-aides/detail/actualites/bourse-sociale/categorie/formation-enseignement-jeunesse/#_">sur cette page</a>.
-  - Être français·e ou ressortissant·e d’un pays de l’union européenne, ou
+  - Être français·e ou ressortissant ou ressortissante d’un pays de l’union européenne, ou
     étranger·e en situation régulière en France depuis le 1er janvier de
     l’année de début du cycle de formation.
   - Justifier d’un niveau de ressources permettant de situer la demande dans le
