--- a/data/benefits/javascript/hauts-de-france-bourses-etudes-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/hauts-de-france-bourses-etudes-sanitaires-et-sociales.yml
@@ -4,7 +4,7 @@ description: Cette aide de la Région des Hauts-de-France vise à soutenir
   financièrement les étudiants ou étudiantes qui préparent un diplôme du secteur sanitaire
   et social.
 conditions:
-  - Être inscrit·e dans un établissement de formation des travailleurs sociaux
+  - Être inscrit ou inscrite dans un établissement de formation des travailleurs sociaux
     et professions de santé des Hauts-de-France agréé et financé par la Région.
   - Suivre l'une des <a target="_blank" rel="noopener" title ="Formations éligibles - Nouvelle fenêtre"
     href="https://guide-aides.hautsdefrance.fr/spip.php?page=dispositif&id_dispositif=667">formations
