--- a/data/benefits/javascript/hauts-de-france-carte-generation-apprentis-aide-restauration.yml
+++ b/data/benefits/javascript/hauts-de-france-carte-generation-apprentis-aide-restauration.yml
@@ -4,9 +4,9 @@ description: Grâce à la carte Génération - Apprentis, bénéficiez d'une ré
   des frais de restauration engagés au cours de votre formation en centre de
   formation ou en entreprise.
 conditions:
-  - Être inscrit·e dans un CFA ou un organisme de formation sur le territoire
+  - Être inscrit ou inscrite dans un CFA ou un organisme de formation sur le territoire
     des Hauts de France.
-  - OU être inscrit·e dans un CFA ou un organisme de formation hors région
+  - OU être inscrit ou inscrite dans un CFA ou un organisme de formation hors région
     Hauts-de-France si l'offre de formation n'existe pas régionalement et que
     vous êtes employé·e par une entreprise du territoire des Hauts-de-France,
     sous réserve que vous ne perceviez pas d'aide d'une autre Région.
