--- a/data/benefits/javascript/hauts-de-france-fonds-regional-aide-urgence-sanitaire-social.yml
+++ b/data/benefits/javascript/hauts-de-france-fonds-regional-aide-urgence-sanitaire-social.yml
@@ -6,7 +6,7 @@ description: Cette aide vise à apporter rapidement une aide financière
   ponctuelle et personnalisée aux étudiants ou étudiantes du secteur sanitaire et social en
   difficulté financière. Elle est renouvelable une fois durant l'année scolaire.
 conditions:
-  - Être inscrit·e dans un établissement de formation des travailleurs sociaux
+  - Être inscrit ou inscrite dans un établissement de formation des travailleurs sociaux
     et professions de santé des Hauts-de-France agréé et financé par la Région.
   - Suivre l'une des <a target="_blank" title ="Formations éligibles - Nouvelle fenêtre"
     rel="noopener"href="https://guide-aides.hautsdefrance.fr/spip.php?page=dispositif&id_dispositif=667">formations
