--- a/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
@@ -1,11 +1,11 @@
 label: bourses sanitaires et sociales
 institution: martinique
 description: La Collectivité Territoriale de Martinique verse des bourses aux
-  étudiants ou étudiantes inscrit·e·s en formation sanitaire et sociale, école paramédicale
+  étudiants ou étudiantes inscrit ou inscrite·s en formation sanitaire et sociale, école paramédicale
   ou de sage-femme dans les établissements agréés dispensant des formations
   sociales et sanitaires en Martinique.
 conditions:
-  - Être de nationalité française ou ressortissant·e d’un pays de l’Union
+  - Être de nationalité française ou ressortissant ou ressortissante d’un pays de l’Union
     Européenne.
   - Remplir les <a target="_blank" rel="noopener" title ="Critères d'éligibilité - Nouvelle fenêtre"
     href="https://www.collectivitedemartinique.mq/wp-content/uploads/2021/07/Pr_Broch_a5_Espace-Etudiants_Form-Sanitaires_2107.pdf">critères
