--- a/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
+++ b/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
@@ -3,10 +3,10 @@ label:
   social
 institution: region_provence_alpes_cote_azur
 description: Il s’agit d’une aide financière destinée à améliorer les conditions
-  de vie des élèves et étudiants ou étudiantes inscrit·e·s dans une filière sanitaire ou du
+  de vie des élèves et étudiants ou étudiantes inscrit ou inscrite·s dans une filière sanitaire ou du
   travail social en Région Provence-Alpes-Côte d'Azur.
 conditions:
-  - Être stagiaire de la formation professionnelle inscrit·e en formation
+  - Être stagiaire de la formation professionnelle inscrit ou inscrite en formation
     sanitaire de niveau V (aide soignant·e, auxiliaire de puériculture,
     ambulancier·e).
   - Être bénéficiaire de la bourse régionale d’études sanitaires et sociales.
