--- a/data/benefits/javascript/region-auvergne-rhone_alpes-bourse-mobilite-internationale-etudiants.yml
+++ b/data/benefits/javascript/region-auvergne-rhone_alpes-bourse-mobilite-internationale-etudiants.yml
@@ -3,7 +3,7 @@ institution: region_auvergne_rhone_alpes
 description: Cette aide a pour but de soutenir la mobilité internationale des
   étudiants ou étudiantes en études supérieures de la Région Auvergne-Rhône-Alpes.
 conditions:
-  - Être inscrit·e dans un établissement d'enseignement supérieur
+  - Être inscrit ou inscrite dans un établissement d'enseignement supérieur
     d'Auvergne-Rhône-Alpes.
 conditions_generales:
   - type: regions
