--- a/data/benefits/javascript/region-bourgogne-franche-comte-aide-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-aide-au-permis-de-conduire.yml
@@ -3,7 +3,7 @@ institution: region_bourgogne_franche_comte
 description: Grâce à l'aide au permis de conduire de la région, bénéficiez du
   financement d'une partie de votre permis B.
 conditions:
-  - Être inscrit·e dans une autoécole bourguignonne-franc-comtoise.
+  - Être inscrit ou inscrite dans une autoécole bourguignonne-franc-comtoise.
   - Être rattaché·e au foyer fiscal parental (conditions de ressources
     financières) ou émancipé·e fiscalement (sans conditions).
   - Être engagé·e dans un parcours de formation (niveau IV ou inférieur) ou
