--- a/data/benefits/javascript/region-bourgogne-franche-comte-stages-monde.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-stages-monde.yml
@@ -4,7 +4,7 @@ description: Cette aide vous permet de financer une expérience professionnelle 
   l’étranger sous la forme d'une bourse, et d'être accompagné·e dans votre
   démarche.
 conditions:
-  - Être inscrit·e à Pôle emploi avant le début du stage.
+  - Être inscrit ou inscrite à Pôle emploi avant le début du stage.
 conditions_generales:
   - type: regions
     values:
