--- a/data/benefits/javascript/region-bretagne-aide-qualif-vae.yml
+++ b/data/benefits/javascript/region-bretagne-aide-qualif-vae.yml
@@ -5,7 +5,7 @@ description: Cette aide s’adresse aux personnes en recherche d’emploi qui
   s’agit de financer l’accompagnement individuel nécessaire pour la présentation
   de leur dossier devant le jury de validation.
 conditions:
-  - Être en recherche d'emploi inscrit·e à Pôle Emploi et justifier d’au moins
+  - Être en recherche d'emploi inscrit ou inscrite à Pôle Emploi et justifier d’au moins
     un an d’expérience professionnelle dans le domaine visé.
 conditions_generales:
   - type: regions
