--- a/data/benefits/javascript/region-bretagne-bourse-international-lycee-pro.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-lycee-pro.yml
@@ -4,7 +4,7 @@ description:
   La région Bretagne finance les lycéens ou lycéennes professionnel·le·s qui
   souhaitent effectuer un stage professionnel à l’étranger.
 conditions:
-  - "Être inscrit·e en lycée en formation professionnelle de niveau 3 ou 4 :
+  - "Être inscrit ou inscrite en lycée en formation professionnelle de niveau 3 ou 4 :
     CAP, CAPA, CAPM, Bac Pro, BMA, FCIL, MC, DTMS, etc. ou en Bac Technologiques
     « Hôtellerie »."
   - Contacter au préalable votre établissement qui vous indiquera la marche à
