--- a/data/benefits/javascript/region-hauts-de-france-fonds-regional-social-urgence.yml
+++ b/data/benefits/javascript/region-hauts-de-france-fonds-regional-social-urgence.yml
@@ -3,7 +3,7 @@ institution: hauts_de_france
 description: La Région propose d'apporter une aide financière personnalisée aux
   étudiants ou étudiantes en difficulté financière.
 conditions:
-  - Être inscrit·e dans un établissement d'enseignement supérieur reconnu par le
+  - Être inscrit ou inscrite dans un établissement d'enseignement supérieur reconnu par le
     Ministère de l'enseignement supérieur.
   - Être en grande difficulté financière.
   - Prendre rendez-vous avec votre CROUS pour effectuer la demande.
