--- a/data/benefits/javascript/region-ile-de-france-aide-apprentissage.yml
+++ b/data/benefits/javascript/region-ile-de-france-aide-apprentissage.yml
@@ -1,12 +1,12 @@
 label: aide Régionale à l’Apprentissage (ARA)
 institution: region_ile_de_france
 description: L’Aide Régionale à l’Apprentissage (ARA) a pour objectif de
-  soutenir les apprenti·e·s inscrit·e·s en formation de premiers niveaux (3, 4
+  soutenir les apprenti·e·s inscrit ou inscrite·s en formation de premiers niveaux (3, 4
   et 5) en les aidant à faire face à des dépenses liées à l’achat de livres,
   d’équipement et de documentation professionnelle, de frais de transport, de
   restauration ou d’hébergement, etc.
 conditions:
-  - Être apprenti·e inscrit·e en 2021-2022 en première année dans une
+  - Être apprenti·e inscrit ou inscrite en 2021-2022 en première année dans une
     formation de niveau 3, 4 et 5 dans un organisme de formation – centre de
     formation d’apprentis (OF-CFA) francilien.
   - Faire votre demande auprès de votre OF ou CFA.
