--- a/data/benefits/javascript/region-ile-de-france-aide-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/region-ile-de-france-aide-au-permis-de-conduire.yml
@@ -4,8 +4,8 @@ description: Grâce à cette aide au permis de conduire, la Région finance tout
   partie du permis B pour les jeunes franciliens en insertion.
 conditions:
   - "Vous devez être dans l'un des cas suivants : être stagiaire de la formation
-    professionnelle inscrit·e dans une formation financée par la Région; ou
-    être inscrit·e et suivi·e en mission locale, signataire d’un parcours
+    professionnelle inscrit ou inscrite dans une formation financée par la Région; ou
+    être inscrit ou inscrite et suivi ou suivie en mission locale, signataire d’un parcours
     contractualisé d’accompagnement vers l’emploi et l’autonomie (PACEA), dont
     le projet professionnel, attesté par le conseiller de la mission locale,
     nécessite l’obtention du permis; ou être demandeur·euse d’emploi résidant
