--- a/data/benefits/javascript/region-ile-de-france-bourse-installtation-des-étudiants-en-kinésithérapie-et-maïeutique.yml
+++ b/data/benefits/javascript/region-ile-de-france-bourse-installtation-des-étudiants-en-kinésithérapie-et-maïeutique.yml
@@ -4,7 +4,7 @@ description: La Région Ile-de-France soutient l'installation des étudiants ou 
   kinésithérapie et maïeutique (sages-femmes) dans les zones franciliennes
   carencées en professionnels de santé.
 conditions:
-  - Etre inscrit·e en avant-dernière année d'études.
+  - Etre inscrit ou inscrite en avant-dernière année d'études.
   - S'engager à s'installer pour 3 ans minimum, en secteur 1, dans une zone
     carencée, dans les 6 mois suivant l'obtention du diplôme.
 conditions_generales:
