--- a/data/benefits/javascript/region-normandie-pass-monde-etudes-secondaires.yml
+++ b/data/benefits/javascript/region-normandie-pass-monde-etudes-secondaires.yml
@@ -2,11 +2,11 @@ label: pass Monde Etudes secondaires
 imgSrc: img/benefits/logo-pass-monde.jpg
 institution: region_normandie
 description: L’aide Pass Monde accompagne la mobilité individuelle des
-  normand·e·s inscrit·e·s dans un cursus d’étude du secondaire en formation
+  normand·e·s inscrit ou inscrite·s dans un cursus d’étude du secondaire en formation
   initiale ou continue (lycéens ou lycéennes, apprenti·e·s, jeunes en contrats de
   professionnalisation et stagiaires de la formation professionnelle).
 conditions:
-  - Être inscrit·e dans un établissement normand ou dans une autre région de
+  - Être inscrit ou inscrite dans un établissement normand ou dans une autre région de
     France si la filière ou le type de cursus n'existe pas en Normandie.
   - Effectuer une mobilité d'un minimum de 4 semaines (financement jusqu'à 26
     semaines maximum).
