--- a/data/benefits/javascript/region-nouvelle-aquitaine-sejour-etudes-etranger.yml
+++ b/data/benefits/javascript/region-nouvelle-aquitaine-sejour-etudes-etranger.yml
@@ -15,7 +15,7 @@ profils:
   - type: stagiaire
     conditions: []
 conditions:
-  - Être inscrit·e dans un établissement de la Région et réaliser un séjour
+  - Être inscrit ou inscrite dans un établissement de la Région et réaliser un séjour
     d'études à l’étranger dans le cadre de votre cursus en formation initiale ou
     continue.
 interestFlag: _interetEtudesEtranger
