--- a/data/benefits/javascript/region-occitanie-aide-au-merite-pour-les-etudiants-en-formations-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/region-occitanie-aide-au-merite-pour-les-etudiants-en-formations-sanitaires-et-sociales.yml
@@ -6,7 +6,7 @@ description: Cette aide au mérite d’un montant de 900 € est versée aux ét
 conditions:
   - Être titulaire d’une mention « très bien » à la dernière session du
     baccalauréat français.
-  - Être inscrit·e dans une formation sanitaire et sociale ouvrant droit à
+  - Être inscrit ou inscrite dans une formation sanitaire et sociale ouvrant droit à
     bourse.
   - Faire sa demande avant le 31 octobre de l'année scolaire en cours.
 conditions_generales:
