--- a/data/benefits/javascript/region-occitanie-bourse-de-stage-erasmus-formations-sanitaires-sociales.yml
+++ b/data/benefits/javascript/region-occitanie-bourse-de-stage-erasmus-formations-sanitaires-sociales.yml
@@ -11,7 +11,7 @@ conditions_generales:
   - type: formation_sanitaire_social
 profils: []
 conditions:
-  - Être inscrit·e dans l’<a target="_blank" rel="noopener" title="établissements (catégorie "bénéficiaires") - Nouvelle fenêtre"
+  - Être inscrit ou inscrite dans l’<a target="_blank" rel="noopener" title="établissements (catégorie "bénéficiaires") - Nouvelle fenêtre"
     href="https://www.laregion.fr/Dispositif-de-bourse-de-stage-ERASMUS">un des
     20 établissements (catégorie "bénéficiaires")</a>.
   - Effectuer un stage entre 2 et 12 mois à temps plein dans une structure
