--- a/data/benefits/javascript/region-provence-alpes-cote-azur-chequier-pass-sante-jeunes.yml
+++ b/data/benefits/javascript/region-provence-alpes-cote-azur-chequier-pass-sante-jeunes.yml
@@ -16,7 +16,7 @@ conditions_generales:
       - "93"
 profils: []
 conditions:
-  - "Être dans l'un des cas suivants : inscrit·e dans un lycée, dans un centre
+  - "Être dans l'un des cas suivants : inscrit ou inscrite dans un lycée, dans un centre
     de formation d'apprentis (CFA), dans un établissement de formation sanitaire
     et sociale, dans un établissement d'enseignement supérieur, dans une mission
     locale, à Pôle Emploi, ou bien en stage de formation professionnelle, en
