--- a/data/benefits/javascript/region_bretagne-les-aides-prepa.yml
+++ b/data/benefits/javascript/region_bretagne-les-aides-prepa.yml
@@ -14,7 +14,7 @@ description: >-
 
   <a target="_blank" rel="noopener" title ="PREPA Avenir - Nouvelle fenêtre" href="https://www.bretagne.bzh/aides/fiches/prepa-avenir/">PREPA Avenir</a> : une formation pour construire son avenir
 conditions:
-  - Être en recherche d’emploi, sans emploi ou en emploi précaire, inscrit·e ou
+  - Être en recherche d’emploi, sans emploi ou en emploi précaire, inscrit ou inscrite ou
     non à Pôle Emploi.
 conditions_generales:
   - type: regions
