--- a/data/benefits/javascript/region_ile_de_france-aide-individuelle-régionale-vers-l’emploi.yml
+++ b/data/benefits/javascript/region_ile_de_france-aide-individuelle-régionale-vers-l’emploi.yml
@@ -4,7 +4,7 @@ description: La Région finance des formations facilitant le retour, l'accès ou
   le maintien en emploi sur des secteurs en tension de recrutement en
   Île-de-France.
 conditions:
-  - Être en recherche d'emploi inscrit·e à Pôle Emploi.
+  - Être en recherche d'emploi inscrit ou inscrite à Pôle Emploi.
   - Suivre une formation qui remplit les <a target="_blank" rel="noopener" title ="Critères d'éligibilité - Nouvelle fenêtre"
     href="https://www.iledefrance.fr/aide-individuelle-regionale-vers-lemploi-aire-2">critères
     d'éligibilité</a>.
