--- a/data/benefits/javascript/region_ile_de_france-bourses-pour-les-élèves-et-étudiant-e-s-inscrit-e-s-en-formations-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/region_ile_de_france-bourses-pour-les-élèves-et-étudiant-e-s-inscrit-e-s-en-formations-sanitaires-et-sociales.yml
@@ -1,12 +1,12 @@
-label: bourses pour les élèves et étudiants ou étudiantes inscrit·e·s en formations
+label: bourses pour les élèves et étudiants ou étudiantes inscrit ou inscrite·s en formations
   sanitaires et sociales
 institution: region_ile_de_france
 description: La Région Ile-de-France verse, sous conditions de ressources, une
   bourse aux élèves et étudiants ou étudiantes en formation paramédicale ou sociale.
 conditions:
-  - Etre de nationalité française ou ressortissant·e d'un pays de l'Union
+  - Etre de nationalité française ou ressortissant ou ressortissante d'un pays de l'Union
     européenne ou étranger en situation régulière en France.
-  - Être élève ou étudiant·e en formation initiale, inscrit·e en cursus
+  - Être élève ou étudiant·e en formation initiale, inscrit ou inscrite en cursus
     complet dans un établissement dont la formation est agréée par la Région
     Ile-de-France.
 conditions_generales:
