--- a/data/benefits/javascript/region_normandie-aides-aux-formations-paramédicales-sociales-ou-de-santé.yml
+++ b/data/benefits/javascript/region_normandie-aides-aux-formations-paramédicales-sociales-ou-de-santé.yml
@@ -3,7 +3,7 @@ institution: region_normandie
 description: La Région Normandie finance des aides pour les étudiants ou étudiantes et
   élèves des formations sanitaires, sociales et de santé.
 conditions:
-  - Être inscrit·e dans une des <a target="_blank" rel="noopener" title ="Formations éligibles - Nouvelle fenêtre"
+  - Être inscrit ou inscrite dans une des <a target="_blank" rel="noopener" title ="Formations éligibles - Nouvelle fenêtre"
     href="https://www.crous-normandie.fr/wp-content/uploads/sites/41/2019/01/Liste-des-formations-paramSodicales-de-la-RSogion-Normandie-1.pdf">formations
     éligibles</a>.
 conditions_generales:
