--- a/data/benefits/javascript/region_normandie-pass-monde-etudes-supérieures-1.yml
+++ b/data/benefits/javascript/region_normandie-pass-monde-etudes-supérieures-1.yml
@@ -2,12 +2,12 @@ label: pass Monde Etudes supérieures
 imgSrc: img/benefits/logo-pass-monde.jpg
 institution: region_normandie
 description: La Région Normandie accompagne les jeunes normand·e·s âgé·e·s de 15
-  à 30 ans inscrit·e·s dans un cursus d’études supérieures en formation initiale
+  à 30 ans inscrit ou inscrite·s dans un cursus d’études supérieures en formation initiale
   ou continue de niveau III, II et I  et effectuant une mobilité internationale
   individuelle (stage en milieu professionnel, séjour d'études en établissement
   étranger, mission d'étude et d'enquête sur le terrain).
 conditions:
-  - Être inscrit·e dans un établissement normand ou dans une autre région de
+  - Être inscrit ou inscrite dans un établissement normand ou dans une autre région de
     France si la filière ou le type de cursus n'existe pas en Normandie.
   - Effectuer une mobilité d'un minimum de 4 semaines (financement jusqu'à 26
     semaines maximum).
