--- a/data/benefits/openfisca/loire_atlantique_aide_mobilite_permis_am.yml
+++ b/data/benefits/openfisca/loire_atlantique_aide_mobilite_permis_am.yml
@@ -7,7 +7,7 @@ description: |
 conditions:
   - Occuper, à titre de résidence principale, un logement sur le territoire du département de Loire Atlantique depuis <strong>plus d’un an<strong>.
   - Ne pas bénéficier d’une autre aide au permis de conduire.
-  - Être inscrit·e dans une auto-école.
+  - Être inscrit ou inscrite dans une auto-école.
 link: https://www.loire-atlantique.fr/jcms/classement-des-contenus/guides-aides/vous-etes/jeune/l-aide-au-permis-de-conduire-pour-les-jeunes-voiture-et-cyclomoteur-fr-t1_17944
 instructions: https://www.loire-atlantique.fr/44/jeunesse/l-aide-au-permis-de-conduire-pour-les-jeunes-voiture-et-cyclomoteur/c_1154102#idTitre5
 prefix: l’
