--- a/data/benefits/javascript/caf-haute-saone-aide-autonomie.yml
+++ b/data/benefits/javascript/caf-haute-saone-aide-autonomie.yml
@@ -14,7 +14,7 @@ conditions_generales:
 profils: []
 conditions:
   - Construire votre parcours avec un accompagnement (foyer de jeunes
-    travailleur·euse·s, travailleur·euse social·e, Caf ou professionnel·le du
+    travailleurs ou travailleuses, travailleur social ou travailleuse sociale, Caf ou professionnels du
     secteur médico-social).
   - Contacter votre Caf pour faire votre demande.
 type: bool
