--- a/data/benefits/javascript/hauts-de-france-aide-à-la-restauration-des-étudiants-boursiers-en-filière-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/hauts-de-france-aide-à-la-restauration-des-étudiants-boursiers-en-filière-sanitaire-et-sociale.yml
@@ -5,7 +5,7 @@ description: Cette aide vise à offrir la gratuité des repas dans les restauran
   universitaires aux étudiants ou étudiantes boursier·e·s en filière sanitaire et sociale
   (3,30 € par repas dans la limite de 100 repas sur l'année scolaire).
 conditions:
-  - Être inscrit·e dans un établissement d'enseignement supérieur partenaire de
+  - Être inscrit ou inscrite dans un établissement d'enseignement supérieur partenaire de
     la Région et reconnu par le ministère de l'Enseignement supérieur dans les
     Hauts-de-France, ou dans un établissement dispensant une formation sanitaire
     ou sociale géré par la Région.
