--- a/data/benefits/javascript/hauts-de-france-carte-generation-apprentis-aide-transport.yml
+++ b/data/benefits/javascript/hauts-de-france-carte-generation-apprentis-aide-transport.yml
@@ -3,9 +3,9 @@ institution: hauts_de_france
 description: Grâce à cette aide, la région participe à financer vos trajets pour
   vous rendre à votre centre de formation.
 conditions:
-  - Être inscrit·e dans un CFA ou un organisme de formation sur le territoire
+  - Être inscrit ou inscrite dans un CFA ou un organisme de formation sur le territoire
     des Hauts de France.
-  - OU être inscrit·e dans un CFA ou un organisme de formation hors région
+  - OU être inscrit ou inscrite dans un CFA ou un organisme de formation hors région
     Hauts-de-France si l'offre de formation n'existe pas régionalement et que
     vous êtes employé·e par une entreprise du territoire des Hauts-de-France,
     sous réserve que vous ne perceviez pas d'aide d'une autre Région.
