--- a/data/benefits/javascript/region-provence-alpes-cote-azur-accompagnement-vae.yml
+++ b/data/benefits/javascript/region-provence-alpes-cote-azur-accompagnement-vae.yml
@@ -10,7 +10,7 @@ profils:
   - type: chomeur
     conditions: []
 conditions:
-  - Être inscrit·e à Pôle Emploi.
+  - Être inscrit ou inscrite à Pôle Emploi.
 type: float
 unit: €
 periodicite: ponctuelle
