--- a/data/benefits/javascript/region-provence-alpes-cote-azur-un-parrain-un-emploi.yml
+++ b/data/benefits/javascript/region-provence-alpes-cote-azur-un-parrain-un-emploi.yml
@@ -17,7 +17,7 @@ profils:
     conditions: []
 conditions:
   - Être titulaire d’un Bac +2.
-  - Être inscrit·e à Pôle Emploi.
+  - Être inscrit ou inscrite à Pôle Emploi.
 type: bool
 unit: €
 periodicite: autre
