--- a/data/benefits/javascript/region_pays_de_la_loire-aide-au-financement-du-permis-de-conduire.yml
+++ b/data/benefits/javascript/region_pays_de_la_loire-aide-au-financement-du-permis-de-conduire.yml
@@ -11,7 +11,7 @@ profils:
   - type: chomeur
     conditions: []
 conditions:
-  - Être inscrit·e à Pôle Emploi.
+  - Être inscrit ou inscrite à Pôle Emploi.
 interestFlag: _interetPermisDeConduire
 type: float
 unit: €
